--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
     "namespace": "MaxMilhas\\Entities\\Model",
+    "extends": "MaxMilhas\\DTO\\DTO",
+    "output-dir": "/home/ubuntu/Entidades",
     "database": {
         "schema": "development",
         "host": "10.10.10.101",
