--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ vendor/
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+composer.lock
 
 
 ### NetBeans template
@@ -68,3 +68,4 @@ crashlytics.properties
 crashlytics-build.properties
 
 
+cache/
